Attempt to fix input & options element spacing.

--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ h2{
 		input{
 			display: inline-block;
 			width: 66%;
-			height: 80%;
+			height: 82%;
 			border-radius: 0 0 0 15px;
 			box-shadow: none;
 			border-bottom: 5px solid #000;
@@ -323,7 +323,7 @@ h2{
 			width: 34%;
 			height: 100%;
 			border-radius: 0 15px 0 0;
-			margin: auto;
+			margin-left: 0;
 			box-shadow: none;
 			border-bottom: 5px solid #FFF;
 			border-left: none;
@@ -397,6 +397,7 @@ h2{
 			width: 33%;
 			position: absolute;
 			right: 0;
+			padding-right: 10px;
 		}
 
 	.container{
